platform/stack/adhar-console/manifests/service.yaml
---
# Source: adhar-console/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adhar-console
  labels:
    app.kubernetes.io/name: adhar-console
    helm.sh/chart: adhar-console-0.1.0
    app.kubernetes.io/instance: adhar-console
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-service
  selector:
    app.kubernetes.io/name: adhar-console
    app.kubernetes.io/instance: adhar-console
