platform/stack/adhar-console/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adhar-console-ingress
  namespace: adhar-system
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  ingressClassName: "nginx"
  rules:
    - host: adhar.localtest.me
      http:
        paths:
          - path: /console
            pathType: ImplementationSpecific
            backend:
              service:
                name: adhar-console-svc
                port:
                  name: http
