platform/stack/adhar-console/manifests/install.yaml
apiVersion: v1
kind: Service
metadata:
  name: adhar-console-svc
  labels:
    app.kubernetes.io/name: adhar-console
    app.kubernetes.io/instance: adhar-console
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http-service
  selector:
    app.kubernetes.io/name: adhar-console
    app.kubernetes.io/instance: adhar-console
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adhar-console-ingress
  namespace: adhar-system
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: adhar-console-svc
                port:
                  name: http
    - host: adhar.localtest.me
      http:
        paths:
          - path: /console
            pathType: ImplementationSpecific
            backend:
              service:
                name: adhar-console-svc
                port:
                  name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adhar-console
  labels:
    app.kubernetes.io/name: adhar-console
    app.kubernetes.io/instance: adhar-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adhar-console
      app.kubernetes.io/instance: adhar-console
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adhar-console
        app.kubernetes.io/instance: adhar-console
    spec:
      serviceAccountName: adhar-console-sa
      securityContext:
        runAsGroup: 101
        runAsUser: 101
      containers:
        - name: adhar-console
          image: "docker.io/adhario/console:latest"
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsGroup: 101
            runAsUser: 101
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
